2011-03-03  Alexis Menard  <alexis.menard@openbossa.org>

Reviewed by Andreas Kling.

        [Qt] QGraphicsWebView should use updateMicroFocus() of QGraphicsItem
        https://bugs.webkit.org/show_bug.cgi?id=55568

        We should use updateMicroFocus() from QGraphicsItem rather than the implementation
        in QGraphicsWebView. _q_updateMicroFocus was added when QGraphicsItem didn't have the feature.
        In Qt 4.7, updateMicroFocus was added, let's use it, then we can benefit of all bug fixing done
        in QGraphicsItem.

        * Api/qgraphicswebview.cpp:
        (QGraphicsWebView::setPage):
        * Api/qgraphicswebview.h:

Canonical link: https://commits.webkit.org/70165@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80270 268f45cc-cd09-0410-ab3c-d52691b4dbfc