Source/WebKit/qt/Api/qgraphicswebview.h
@@ -144,9 +144,6 @@ protected:
 
 private:
     Q_PRIVATE_SLOT(d, void _q_doLoadFinished(bool success))
-#if !defined(QT_NO_IM) && (defined(Q_WS_X11) || defined(Q_WS_QWS) || defined(Q_OS_SYMBIAN))
-    Q_PRIVATE_SLOT(d, void _q_updateMicroFocus())
-#endif
     Q_PRIVATE_SLOT(d, void _q_pageDestroyed())
     // we don't want to change the moc based on USE() macro, so this function is here
     // but will be empty if ACCLERATED_COMPOSITING is disabled
